Sai Vishwas : integrated my part,
todo :

> remove roundtrip make it one way

> fix delete ( list of places not getting updated when places are added and later removed)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="google_app_id">461996749494</string>
     <string name="title_activity_kkk">Map</string>
+    <string name="rm">X</string>
 
 </resources>
