changes made to emergency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,31 +11,24 @@
     <string name="title_activity_emergency">Emergency</string>
 
     <string-array name="place_type">
-        <item>airport</item>
         <item>atm</item>
         <item>bank</item>
-        <item>bus_station</item>
-        <item>church</item>
-        <item>doctor</item>
+        <item>car_repair</item>
         <item>hospital</item>
-        <item>mosque</item>
-        <item>movie_theater</item>
-        <item>hindu_temple</item>
-        <item>restaurant</item>
+        <item>gas_station</item>
+        <item>police</item>
+        <item>pharmacy</item>
     </string-array>
 
     <string-array name="place_type_name">
-        <item>Airport</item>
         <item>ATM</item>
         <item>Bank</item>
-        <item>Bus Station</item>
-        <item>Church</item>
-        <item>Doctor</item>
+        <item>Car Service</item>
         <item>Hospital</item>
-        <item>Mosque</item>
-        <item>Movie Theater</item>
-        <item>Hindu Temple</item>
-        <item>Restaurant</item>
+        <item>Petrol Bunk</item>
+        <item>Police</item>
+        <item>Pharmacy</item>
+
     </string-array>
 
 </resources>
